# tokopedia_image_inspiration

./: .gitignore  beach-party-tokopedia-looks.json  pyproject.toml  requirements.txt
specs/: add-bali-location-filter.md  deploy-telegram-bot.md  telegram-tokopedia-fashion-bot.md
src/: __init__.py  bot.py  config.py  gemini_analyzer.py  response_formatter.py  tokopedia_search.py
